--- a/Integrated Presenter/App.xaml
+++ b/Integrated Presenter/App.xaml
@@ -91,11 +91,10 @@
             <Setter Property="Width" Value="60"></Setter>
             <Setter Property="Height" Value="60"></Setter>
             <Setter Property="Margin" Value="10"></Setter>
-            <Setter Property="Background" Value="{StaticResource GrayLight}"></Setter>
+            <Setter Property="Background" Value="{StaticResource OffLight}"></Setter>
             <Setter Property="Foreground" Value="#2a2a2a"></Setter>
             <Setter Property="IsTabStop" Value="False"></Setter>
             <Setter Property="Focusable" Value="False"></Setter>
-            <Setter Property="Cursor" Value="Hand"></Setter>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
