refactor compiler to put logic in ast elements
- Strip comments in preprocessor correctly
- remove comments from AST
- UI scroll error list

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -79,7 +79,7 @@
                                 Render Output:
                             </TextBlock>
                         </Grid>
-                        <ScrollViewer Grid.Row="1">
+                        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                             <TextBlock Name="tbConsole"></TextBlock>
                         </ScrollViewer>
                     </Grid>
