--- a/SlideCreater/ViewControls/AssetItemControl.xaml
+++ b/SlideCreater/ViewControls/AssetItemControl.xaml
@@ -35,13 +35,13 @@
                         <Viewbox Grid.Row="1" Stretch="Uniform">
                             <StackPanel Grid.Row="1" Orientation="Horizontal">
                                 <Label FontSize="10">
-                                    <Hyperlink>
-                                        Insert
+                                    <Hyperlink Click="ClickDeleteAsset">
+                                        Delete
                                     </Hyperlink>
                                 </Label>
                                 <Label FontSize="10">
                                     <Hyperlink Click="ClickFitInsert">
-                                        Fit Insert
+                                        Insert
                                     </Hyperlink>
                                 </Label>
                             </StackPanel>
