First crack at saving projects with assets
-- saves project and assets as zip
-- creates tmp folder to work from

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -20,7 +20,9 @@
             <MenuItem Header="File">
                 <MenuItem Click="ClickNew" Header="New"></MenuItem>
                 <MenuItem Click="ClickOpen" Header="Open"></MenuItem>
+                <MenuItem Click="ClickOpenJSON" Header="Open from JSON"></MenuItem>
                 <MenuItem Click="ClickSave" Header="Save"></MenuItem>
+                <MenuItem Click="ClickSaveJSON" Header="Save JSON"></MenuItem>
             </MenuItem>
         </Menu>
 
