rename cameras & config dsk sources and rates

--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <MenuItem Header="Connections" IsTabStop="False">
                     <MenuItem Click="ClickConnect" Header="Switcher" IsTabStop="False"></MenuItem>
                     <MenuItem Click="ClickConnectMock" Header="Mock Switcher" IsTabStop="False"></MenuItem>
-                    <MenuItem Header="Load Config" IsEnabled="False" IsTabStop="False"></MenuItem>
+                    <MenuItem Click="ClickConfigureSwitcher" Header="Load Config" IsTabStop="False"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="Presentation" IsTabStop="False">
                     <MenuItem Header="Open" Click="OpenPresentation" IsTabStop="False"></MenuItem>
